Fix inconsistencies between the Start page and the Documentation. Fix alignment of the title element when window is stretched to a small horizontal size.

--- a/startpage/xubuntu-docs.css
+++ b/startpage/xubuntu-docs.css
@@ -4,30 +4,32 @@
  *	
  */
 
+@import url('reset.css');
+
 body {
-	background-color: #f5f5f5;
+	background-color: #eee;
 
 	font-family: "Droid Sans", sans-serif;
-	font-size: medium;
+	font-size: small;
 	line-height: 1.3em;
 }
 
 #header {
 	max-width: 950px;
-	margin: 3em auto 0 auto;
-
-	font-size: 95%;
+	margin: 3em auto 1em auto;
+	padding: 0 3em;
+	line-height: 1.5em;
 }
 
 #content {
 	max-width: 950px;
+	min-width: 580px;
 	margin: 1em auto;
 
 	padding: 3em;
+	line-height: 1.5em;
 
 	background-color: #fff;
-
-	font-size: 95%;
 
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
@@ -39,6 +41,7 @@ body {
 h1 {
 	margin: 0 0 1em 0;
 	font-size: 200%;
+	line-height: 1.2em;
 }
 
 h2 {
@@ -53,10 +56,13 @@ h2 {
 
 	h2.intro {
 		color: #2c5aa4;
+		font-size: 200%;
 	}
 
 p {
 	margin-bottom: 1em;
+	font-size: 105%;
+	line-height: 1.4em;
 }
 
 a {
@@ -66,8 +72,8 @@ a {
 }
 
 ol {
-	margin-bottom: 1em;
-	font-size: 110%;
+	margin-bottom: 1.5em;
+	font-size: 130%;
 	line-height: 1.5em;
 }
 
